ec2-instance.yml
AWSTemplateFormatVersion: 2010-09-09
Resources:
  DjangoEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-04581fbf744a7d11f
      InstanceType: t2.micro
      KeyName: django-web-application
      SubnetId: subnet-054914e4f65325949
      AvailabilityZone: us-east-1a
      SecurityGroups:
        - !Ref DjangoSG
      IamInstanceProfile: !Ref RootInstanceProfile
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash
            yum -y groupinstall "Development Tools"
            yum -y install openssl-devel bzip2-devel libffi-devel
            yum -y install python3 git
            pip install django
            django-admin startproject mysite
            python3 manage.py runserver

      Volumes:
        - Device: /dev/sdm
          VolumeId: !Ref DjangoVolume
      Tags:
        - Key: "Name"
          Value: "django-web-application"

  DjangoSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for django application
      GroupName: django-web-sg
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      VpcId: vpc-00930bc47f9c65694

  DjangoVolume:
    Type: AWS::EC2::Volume
    Properties:
      Size: 8
      Encrypted: true
      AvailabilityZone: 'us-east-1a'

  DjangoIAMRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: django-web-application-ec2-role
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonEC2FullAccess
        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM

  RootInstanceProfile:
      Type: AWS::IAM::InstanceProfile
      Properties:
        Path: /
        Roles:
          - !Ref DjangoIAMRole
